fixed eventpage container bleeding

--- a/style.css
+++ b/style.css
@@ -635,7 +635,7 @@ section {
 .event-header h3,
 .event-content p,
 .cta-event a {
-  line-height: 1.3;
+  line-height: 1.4;
   -ms-word-break: break-all;
   word-break: break-all;
   word-break: break-word;
@@ -743,4 +743,13 @@ section {
 .open-button, .close-button {
     padding: 0.2em 0.4em;
     font-size: 0.8rem;
+}
+.home .content p,
+.event {
+    width: 27ch;
+
+  }
+  .event-header-datetime {
+    font-size: 0.8rem;
+  }
 }
